# zavrsni_web

./: Cargo.toml  startup.sh
src/: hung.rs  hung_munkres.rs  main.rs
static/css/: index.css
static/js/: index.js
static/www/: index.html
