[package]
name = "zavrsni_web"
version = "0.1.0"
authors = ["Hrvoje <hrvoje.lesar1@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
serde = "1"
serde_json = "1"

# futures = "0.3.14"
# tokio = { version = "0.2.6", features = ["full"] }

madarska_metoda = { git = "https://github.com/HrvojeLesar/madarska_metoda", version = "0.1.2"}